Delete not MVP included features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:theme="@style/Theme.InList"
         tools:targetApi="31">
         <activity
-            android:name=".root.MainActivity"
+            android:name=".main.MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
